<resources>
    <string name="app_name">Stormy</string>
    <string name="error_title">Oops! Sorry</string>
    <string name="error_message">There was an error. Please try again</string>
    <string name="error_button_ok_test">OK</string>
    <string name="network_unavailable_message">Sorry, the network is unavailable.</string>
    <string name="accu_weather_message"><a href="http://www.accuweather.com">Powered by AccuWeather</a></string>
    <string name="location">Los Angeles, CA</string>
    <string name="rain_snow">RAIN/SNOW?</string>
    <string name="degree_image">degree image</string>
    <string name="weather_icon">weather icon</string>
    <string name="accuweather_logo">accuWeather logo</string>
    <string name="refresh_button">refresh button</string>
    <string name="title_activity_hourly_forecast">HourlyForecastActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>


</resources>